# CortexLume

./: .gitattributes  .gitignore  .npmrc  LICENSE  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  tsconfig.base.json
.github/workflows/: windows-release.yml
apps/desktop/: forge.config.ts  index.html  package.json  tsconfig.json  vite.main.config.ts  vite.renderer.config.ts
apps/desktop/public/anatomy/: anatomy-manifest.json  gray_matter.glb  landmarks.json  scalp.glb  white_matter.glb
apps/desktop/src/main/: main.ts
apps/desktop/src/preload/: preload.ts
apps/desktop/src/renderer/: App.tsx  styles.css
apps/desktop/src/renderer/components/: HeadViewport.tsx  Inspector.tsx  LayoutEditor.tsx  LayoutLibrary.tsx  TopBar.tsx
apps/desktop/src/renderer/lib/: anatomy.ts  geometry.test.ts  geometry.ts
apps/desktop/src/renderer/store/: projectStore.test.ts  projectStore.ts
apps/desktop/src/types/: window.d.ts
assets/templates/MNI152NLin6Asym/: README.md  manifest.json
docs/: SCIENTIFIC_ASSET_PIPELINE.md
scripts/: build_icbm152_assets.py
services/science/: cortexlume-science.spec  pyproject.toml  run.py
services/science/cortexlume_science/: app.py  geometry.py  models.py  template_gate.py
services/science/scripts/: validate_template_assets.py
services/science/tests/: test_api.py  test_geometry.py
